[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqgt-dashboard"
version = "0.1.0"
description = "Unified falsification dashboard and joint constraint fusion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mqgt-core-params>=0.1.0",
    "mqgt-api-schema>=0.1.0",
    "mqgt-fifth-force>=0.1.0",
    "mqgt-collider>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
mqgt-dashboard = "mqgtdashboard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
